# mcp-memory

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  TASK_5_TEST_REPORT.md  debug_browser.py  docker-compose.yml  insert.py  memory.db.bak  package-lock.json  package.json  pyproject.toml  seed_test_db.py  test_bug.py
.agents/workflows/: development.md  plan-feature.md
.github/workflows/: ci.yml  docker.yml  tests.yml
docs/: docker.md
docs/plans/: 2026-03-08-global-workspace-inline-edit-design.md
mcp_memory/: cli.py  db.py  embeddings.py  export.py  server.py  ui_server.py
mcp_memory/repository/: connection.py  context.py  decisions.py  documents.py  enrichment.py  links.py  migrations.py  models.py  notes.py  projects.py  search.py  tags.py  tasks.py
mcp_memory/server/: __init__.py  context.py  decisions.py  documents.py  mcp.py  metadata.py  notes.py  projects.py  resources.py  search.py  tasks.py
mcp_memory/ui/: index.css  index.html  index.js
mcp_memory/ui-src/: App.jsx  App.test.jsx  eslint.config.js  index.css  index.html  vite.config.js
mcp_memory/ui-src/src/: api.js  api.test.js  utils.js  utils.test.js
scripts/: install-hooks.sh  setup.sh
scripts/hooks/: pre-commit
tests/: conftest.py  test_api.py  test_cross_project_search_e2e.py  test_db.py  test_embeddings.py  test_enrichment.py  test_foundation_notes.py  test_migrations.py  test_reembed.py  test_repository.py  test_search.py  test_semantic_search.py  test_semantic_search_all.py  test_server_tools.py  test_todos.py
tests/js/: router.test.js  utils.test.js
(+99 files in other folders)
