[project]
name = "mcp-memory"
version = "0.2.0"
description = "MCP server for persisting project context — hybrid relational + semantic schema"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.4.0",
    "click>=8.1.0",
    "fastembed>=0.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.0", "pytest-cov>=4.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-memory = "mcp_memory.server:main"
mcp-memory-cli = "mcp_memory.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_memory"]
